tests/data/bad/bad_node_subclass.py
from __future__ import annotations

from rizhiy_cfg import CN

from ..good.good import cfg


class BadSubClass:
    pass


cfg = CN(cfg)
cfg.SUBCLASS = BadSubClass
